# PWE-Overlay

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  versions.json  versions.yml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  bug_report.md  feature_request.md
.github/scripts/: generate-badges.js
.github/workflows/: update-badges.yml
backend/: CMakeLists.txt  PWEOverlay.cpp  PWEOverlay.hpp  PWEWebView.cpp  PWEWebView.hpp
backend/Events/: Events.cpp  Events.hpp
backend/Events/job/: job_event.cpp  job_event.hpp
backend/Hooks/: Hooks.cpp  Hooks.hpp
backend/Hooks/bank_deposit/: DepositHook.cpp  DepositHook.hpp
backend/Hooks/bank_economy/: BootstrapHook.cpp  BootstrapHook.hpp  Context.cpp  Context.hpp
backend/Hooks/bank_misc/: TransactionRvaMapping.hpp
backend/Hooks/bank_withdraw/: WithdrawHook.cpp  WithdrawHook.hpp
backend/Internal/: PWEOverlayInternal.hpp  WebViewCommandBridge.cpp
backend/Logitech/: G27LEDManager.cpp  G27LEDManager.hpp
backend/State/: OverlayState.cpp
backend/Storage/: DatabaseManager.cpp  DatabaseManager.hpp
backend/Storage/Jobs/: Jobs.cpp  Jobs.hpp
backend/Storage/Misc/: Misc.cpp  Misc.hpp
backend/Storage/Transactions/: Transactions.cpp  Transactions.hpp
backend/Telemetry/: TelemetryPublisher.cpp
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/public/locales/: en.json  pl.json
frontend/src/: App.vue  i18n.ts  main.ts
frontend/src/assets/: style.css
frontend/src/components/: Alert.vue  Modal.vue
frontend/src/components/layout/: DraggableWidget.vue  SettingsPanel.vue
frontend/src/components/pauseMenu/: debug.vue  job.vue  logBook.vue  overview.vue  transactions.vue  truck.vue
frontend/src/components/ui/: ConfirmModal.vue  JobView.vue  WearBar.vue
frontend/src/components/widgets/: AlertWidget.vue  FuelWidget.vue  GearWidget.vue  JobWidget.vue  LightsWidget.vue  NameWidget.vue  NavigationWidget.vue  SpeedometerWidget.vue  TachographWidget.vue  TachometerWidget.vue  TimeWidget.vue  TruckInfoWidget.vue  WarningsWidget.vue  WearWidget.vue
frontend/src/composables/: useDescriptions.ts  useDraggable.ts  useLanguage.ts  useModal.ts  useResizable.ts  useSimulator.ts  useTelemetry.ts  useToast.ts  useWidgetItem.ts
frontend/src/interfaces/: WebView.ts  misc.ts  plugin.ts  settings.ts  telemetry.ts  transaction.ts  widget.ts
frontend/src/pages/: OverlayView.vue  PauseMenuView.vue
frontend/src/router/: index.ts
frontend/src/stores/: events.ts  layout.ts  logbook.ts  misc.ts  pluginBridge.ts  settings.ts  telemetry.ts  transactions.ts
frontend/src/widgets/: alerts.widget.ts  fuel.widget.ts  gear.widget.ts  index.ts  job.widget.ts  lights.widget.ts  name.widget.ts  navigation.widget.ts  speedometer.widget.ts  tachograph.widget.ts  tachometer.widget.ts  time.widget.ts  truck-info.widget.ts  warnings.widget.ts  wear.widget.ts
scripts/: buildAll.bat  generate-third-party-licenses.mjs
